hamburger alignment on active fix

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -269,5 +269,9 @@ p.emphasis{
     position: absolute;
     display: block;
   }
+
+  .active .mobile-hamburger img {
+    top: 35px;
+  }
   
 }
